--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 
 <!--shapka _____________________-->
 <div class="header">
-    <div class="header_title" ><p class="YYY">починиtь стрелку</p>
+    <div class="header_title" >затемнить к1<br>добавить описание<p class="YYY"></p>
 
     </div>
 
-    <div class="header_slogan">доделать адоптивную верстку, скрол меню<br> исправить баг снизу
+    <div class="header_slogan">
+добавить шрифты пофиксить баг снизу
 
     </div>
     <a name="bot"></a>
@@ -37,41 +38,75 @@
 </div>
 <!-- portfolio-->
 
- <div class="title">GAMES</div>
+ <div class="title">Series</div>
 
 <div class="portfolio">
     <div class="row">
     <div class="container">
         <div class="col-4">
-            <div class="icon pubg"><!--<a href="pubg/pubg.html">--><img src="images/2.jpg"  width="300" height="255" alt="lorem">
+            <div class="icon pubg"><!--<a href="pubg/pubg.html">--><img src="images/0.jpg"  width="300" height="255" alt="lorem">
             </div>
-            <div class="name">pubg</a>
+            <div class="name">1 серия</a>
             </div>
-            <div class="text"> PlayerUnknown’s Battlegrounds (сокр. PUBG) — многопользовательская онлайн-игра в жанре королевской битвы, разрабатываемая и издаваемая студией PUBG Corporation, дочерней компанией корейского издателя Bluehole.
+            <div class="text">
             </div>
 
 
     </div>
 
         <div class="col-4">
-            <div class="icon"><a href="#"><img src="images/3.jpg"  width="300" height="255" alt="lorem">
+            <div class="icon"><a href="#"><img src="images/1.jpg"  width="300" height="255" alt="lorem">
             </div>
-            <div class="name">cs go</a>
+            <div class="name">2 серия</a>
             </div>
-            <div class="text"> Counter-Strike: Global Offensive (CS:GO; с англ. — «Контрудар: глобальное наступление») — многопользовательская компьютерная игра, разработанная компаниями Valve и Hidden Path Entertainment.
+            <div class="text">
             </div>
     </div>
 
         <div class="col-4">
-            <div class="icon"><a href="#"><img src="images/4.jpg"  width="300" height="255" alt="lorem">
+            <div class="icon"><a href="#"><img src="images/2.jpg"  width="300" height="255" alt="lorem">
             </div>
-            <div class="name"><a href="#">Overwatch</a></a>
+            <div class="name"><a href="#">3 серия</a></a>
             </div>
-            <div class="text"> Overwatch — многопользовательская компьютерная игра в жанре шутера от первого лица, разработанная и выпущенная компанией Blizzard Entertainment в 2016 году для Windows, PlayStation 4 и Xbox One и в 2019 году для Nintendo Switch.
+            <div class="text">
             </div>
 
         </div>
     </div>
+</div>
+</div>
+<div class="row">
+<div class="container">
+    <div class="col-4">
+        <div class="icon pubg"><!--<a href="pubg/pubg.html">--><img src="images/3.jpg"  width="300" height="255" alt="lorem">
+        </div>
+        <div class="name">4 серия</a>
+        </div>
+        <div class="text">
+        </div>
+
+
+</div>
+
+    <div class="col-4">
+        <div class="icon"><a href="#"><img src="images/4.jpg"  width="300" height="255" alt="lorem">
+        </div>
+        <div class="name">5 серия</a>
+        </div>
+        <div class="text">
+        </div>
+</div>
+
+    <div class="col-4">
+        <div class="icon"><a href="#"><img src="images/5.jpg"  width="300" height="255" alt="lorem">
+        </div>
+        <div class="name"><a href="#">6 серия</a></a>
+        </div>
+        <div class="text">
+        </div>
+
+    </div>
+</div>
 </div>
 </div>
 <!--<footer></footer>-->
