--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" type="text/css" href="test.css">
   <script src="javas.js">
   </script>
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"></link>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"></link>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></link>
+<link href="https://fonts.googleapis.com/css2?family=Syne+Tactile&display=swap" rel="stylesheet">
 <!--регулирует масштаб.не дает его уменьшить-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--заставляет использовать новые стандарты-->
@@ -19,15 +20,17 @@
 
 <!--shapka _____________________-->
 <div class="header">
-    <div class="header_title" >затемнить к1<br>добавить описание<p class="YYY"></p>
+    <div class="header_title" ><p class="YYY"></p>
 
     </div>
 
     <div class="header_slogan">
-добавить шрифты пофиксить баг снизу
+
 
     </div>
-    <a name="bot"></a>
+
+
+
 
     <div class="header_arrow"><a href="#bot"><i class="fa fa-chevron-down"></i></a>
 
@@ -36,15 +39,35 @@
 
 
 </div>
+<!--description-->
+
+    <div class="title">Description</div>
+    <div class="description"
+        <div class="yu">
+            <div class="left">    <img src="images/10.jpg" width="250px" class"left">
+            </div>
+                <p class="new_description"><span class="Ntitle">Информация о сериале Острые козырьки</span> <br><br>«Острые козырьки» (Peaky Blinders) – британский сериал про преступную группировку братьев Шелби. Создатель истории Стивен Найт основал ее на реальных событиях – такая банда действительно действовала в Британии в начале ХХ века.<br>
+
+Состоит из 5 сезонов, пятый – заключительный, каждый – по 6 серий. В каждом сезоне зрителю предлагается логично завершенный этап истории «Острых козырьков». История динамичная, стильная, что привлекает зрителей. Телесериал стал одним из лидеров по количеству просмотров и рейтингу в стране. Все рекорды побила первая серия 4 сезона.<br>
+<br>
+<span class="Ntitle">Сюжет</span><br>
+<br>
+Начинается история в 1919 году, когда братья Шелби вернулись в войны – они начинают поднимать свой бизнес. Занимаются они букмекерством. Постепенно, из нелегального бизнес перерастает в легальный, группировка расширяет влияние на большую территорию. Но с ростом успешности появлялись и новые, более могущественные враги, если «Острые козырьки» смотреть онлайн без остановки, то всего за 30 часов вы осилите всю историю!<br>
+     <br> <br>
+            </p>
+
+        </div>
+
+</div>
 <!-- portfolio-->
-
+    <a name="bot"></a>
  <div class="title">Series</div>
-
+    <a name="bot"></a>
 <div class="portfolio">
     <div class="row">
     <div class="container">
         <div class="col-4">
-            <div class="icon pubg"><!--<a href="pubg/pubg.html">--><img src="images/0.jpg"  width="300" height="255" alt="lorem">
+            <div class="icon pubg"><a href="https://peaky-blinders.top/episodes/1_sezon_1_seriya"><img src="images/0.jpg"  width="300" height="255" alt="lorem">
             </div>
             <div class="name">1 серия</a>
             </div>
@@ -55,7 +78,7 @@
     </div>
 
         <div class="col-4">
-            <div class="icon"><a href="#"><img src="images/1.jpg"  width="300" height="255" alt="lorem">
+            <div class="icon"><a href="https://peaky-blinders.top/episodes/1_sezon_2_seriya"><img src="images/1.jpg"  width="300" height="255" alt="lorem">
             </div>
             <div class="name">2 серия</a>
             </div>
@@ -64,9 +87,9 @@
     </div>
 
         <div class="col-4">
-            <div class="icon"><a href="#"><img src="images/2.jpg"  width="300" height="255" alt="lorem">
+            <div class="icon"><a href="https://peaky-blinders.top/episodes/1_sezon_3_seriya"><img src="images/2.jpg"  width="300" height="255" alt="lorem">
             </div>
-            <div class="name"><a href="#">3 серия</a></a>
+            <div class="name">3 серия</a></a>
             </div>
             <div class="text">
             </div>
@@ -78,7 +101,7 @@
 <div class="row">
 <div class="container">
     <div class="col-4">
-        <div class="icon pubg"><!--<a href="pubg/pubg.html">--><img src="images/3.jpg"  width="300" height="255" alt="lorem">
+        <div class="icon pubg"><a href="https://peaky-blinders.top/episodes/1_sezon_4_seriya"><img src="images/3.jpg"  width="300" height="255" alt="lorem">
         </div>
         <div class="name">4 серия</a>
         </div>
@@ -89,7 +112,7 @@
 </div>
 
     <div class="col-4">
-        <div class="icon"><a href="#"><img src="images/4.jpg"  width="300" height="255" alt="lorem">
+        <div class="icon"><a href="https://peaky-blinders.top/episodes/1_sezon_5_seriya"><img src="images/4.jpg"  width="300" height="255" alt="lorem">
         </div>
         <div class="name">5 серия</a>
         </div>
@@ -98,9 +121,10 @@
 </div>
 
     <div class="col-4">
-        <div class="icon"><a href="#"><img src="images/5.jpg"  width="300" height="255" alt="lorem">
+
+        <div class="icon"><a href="https://peaky-blinders.top/episodes/1_sezon_6_seriya"><img src="images/5.jpg"  width="300" height="255" alt="lorem">
         </div>
-        <div class="name"><a href="#">6 серия</a></a>
+        <div class="name">6 серия</a></a>
         </div>
         <div class="text">
         </div>
@@ -111,6 +135,7 @@
 </div>
 </div>
 <!--<footer></footer>-->
+
 <div class="footer">
     <div class="container">
         <div class="row">
